Print error messages if exceptions thrown when trying to access object field values